--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,6 +1,3 @@
-html {
-	font-size: 2em;
-}
 html > body > main > article > nav,
 html > body > main > article > header > p {
 	display: none;
@@ -8,13 +5,10 @@ html > body > main > article > header > p {
 html > body {
 	background: #e4ce9b;
 }
-html > body > main {
-	margin-left: 30vh;
-}
 html > body > main > article {
 	background: rgba(255, 255, 255, 0.7);
-	margin: 2em;
-	padding: 2em;
+	padding: 1em;
+	margin: 1em 0;
 	max-width: 30em;
 }
 html.home form > div {
